--- a/packages/docs/netlify.toml
+++ b/packages/docs/netlify.toml
@@ -1,6 +1,6 @@
 # Netlify configuration for actualbudget-website (docs) deployment
 [build]
-  command = "cd ../.. && yarn workspace docs build"
+  command = "yarn build"
   publish = "build"
   ignore = "git diff --quiet HEAD^ HEAD -- packages/docs/"
 
