--- a/packages/sync-server/package.json
+++ b/packages/sync-server/package.json
@@ -18,7 +18,7 @@
     "build": "tsc && yarn add-import-extensions && yarn copy-static-assets",
     "add-import-extensions": "node bin/add-import-extensions.mjs",
     "copy-static-assets": "rm -rf build/src/sql && cp -r src/sql build/src/sql",
-    "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --trace-warnings' vitest --run",
+    "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --import ./register-loader.mjs --trace-warnings' vitest --run",
     "db:migrate": "yarn build && cross-env NODE_ENV=development node build/src/scripts/run-migrations.js up",
     "db:downgrade": "yarn build && cross-env NODE_ENV=development node build/src/scripts/run-migrations.js down",
     "db:test-migrate": "yarn build && cross-env NODE_ENV=test node build/src/scripts/run-migrations.js up",
