--- a/packages/plugins-core/tsconfig.json
+++ b/packages/plugins-core/tsconfig.json
@@ -8,18 +8,7 @@
     "jsx": "react-jsx",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "baseUrl": ".",
-    "paths": {
-      "@actual-app/shared-types": ["../shared-types/src/index.ts"],
-      "@actual-app/shared-types/*": ["../shared-types/src/*"],
-      "@actual-app/shared-types/models": [
-        "../shared-types/src/models/index.ts"
-      ],
-      "@actual-app/query": ["../query/src/index.ts"],
-      "@actual-app/query/*": ["../query/src/*"],
-      "@actual-app/components": ["../component-library/src/index.ts"],
-      "@actual-app/components/*": ["../component-library/src/*"]
-    }
+    "baseUrl": "."
   },
   "include": ["src"]
 }
