--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -19,7 +19,6 @@
     "vitest": "^3.2.4"
   },
   "exports": {
-    ".": "./src/index.ts",
     "./hooks/*": "./src/hooks/*.ts",
     "./icons/logo": "./src/icons/logo/index.ts",
     "./icons/v0": "./src/icons/v0/index.ts",
@@ -51,7 +50,7 @@
     "./tooltip": "./src/Tooltip.tsx",
     "./view": "./src/View.tsx",
     "./color-picker": "./src/ColorPicker.tsx",
-    "./props/*": "./src/props/*.ts"
+    "./modal": "./src/Modal.ts"
   },
   "scripts": {
     "generate:icons": "rm src/icons/*/*.tsx; cd src/icons && svgr --template template.ts --index-template index-template.ts --typescript --expand-props start -d . .",
