--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -7,18 +7,10 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "exports": {
-    ".": {
-      "types": "./src/index.ts",
-      "development": "./src/index.ts"
-    },
-    "./models/*": {
-      "types": "./src/models/*.ts",
-      "development": "./src/models/*.ts"
-    },
-    "./modalProps": {
-      "types": "./src/modalProps.ts",
-      "development": "./src/modalProps.ts"
-    }
+    ".": "./src/index.ts",
+    "./models/*": "./src/models/*.ts",
+    "./modalProps": "./src/modalProps.ts",
+    "./spreadsheet": "./src/spreadsheet.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit"
