--- a/packages/plugins-service/package.json
+++ b/packages/plugins-service/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "workbox-cacheable-response": "^7.3.0",
+    "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
