chore: replace Prettier with Biome formatter
- Add @biomejs/biome as devDependency
- Remove prettier and eslint-config-prettier packages
- Create biome.json with formatter config matching Prettier settings
- Update lint and lint:fix scripts to use biome format
- Update lint-staged to use biome format
- Delete .prettierrc.json and .prettierignore files
- Apply Biome formatting to codebase

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,10 +8,7 @@
   },
   "main": "dist/index.js",
   "types": "@types/index.d.ts",
-  "files": [
-    "dist",
-    "@types"
-  ],
+  "files": ["dist", "@types"],
   "scripts": {
     "build:app": "yarn workspace loot-core build:api",
     "build:crdt": "yarn workspace @actual-app/crdt build",
