--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   },
   "license": "MIT",
   "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
+    "packages": ["packages/*"]
   },
   "scripts": {
     "start": "yarn start:browser",
@@ -51,21 +49,21 @@
     "vrt:docker": "./bin/run-vrt",
     "rebuild-electron": "./node_modules/.bin/electron-rebuild -m ./packages/loot-core",
     "rebuild-node": "yarn workspace loot-core rebuild",
-    "lint": "prettier --check . && eslint . --max-warnings 0",
-    "lint:fix": "prettier --check --write . && eslint . --max-warnings 0 --fix",
+    "lint": "biome format . && eslint . --max-warnings 0",
+    "lint:fix": "biome format --write . && eslint . --max-warnings 0 --fix",
     "install:server": "yarn workspaces focus @actual-app/sync-server --production",
     "typecheck": "yarn tsc --incremental && tsc-strict",
     "jq": "./node_modules/node-jq/bin/jq",
     "prepare": "husky"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@octokit/rest": "^22.0.1",
     "@types/node": "^22.19.1",
     "@types/prompts": "^2.4.9",
     "@typescript-eslint/parser": "^8.46.4",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -81,7 +79,6 @@
     "node-jq": "^6.3.1",
     "npm-run-all": "^4.1.5",
     "p-limit": "^7.2.0",
-    "prettier": "^3.6.2",
     "prompts": "^2.4.2",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
@@ -100,12 +97,9 @@
   "lint-staged": {
     "*.{js,mjs,jsx,ts,tsx,md,json,yml}": [
       "eslint --fix",
-      "prettier --write"
+      "biome format --write"
     ]
   },
   "packageManager": "yarn@4.10.3",
-  "browserslist": [
-    "electron >= 35.0",
-    "defaults"
-  ]
+  "browserslist": ["electron >= 35.0", "defaults"]
 }
