--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -1,5 +1,7 @@
 {
+  "$schema": "./node_modules/oxfmt/configuration_schema.json",
   "singleQuote": true,
   "trailingComma": "all",
   "arrowParens": "avoid"
 }
+
