chore: update oxlint configuration to disable additional rules

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -2,21 +2,22 @@
   "$schema": "./node_modules/oxlint/configuration_schema.json",
   "plugins": ["react", "typescript", "import", "jsx-a11y"],
   "rules": {
-    "no-unused-vars": "off",
-    "no-autofocus": "off",
-    "no-empty-pattern": "off",
-    "no-useless-catch": "off",
-    "no-constant-condition": "off",
+    // TODO fix all these and re-enable
     "import/namespace": "off",
-    "no-async-promise-executor": "off",
-    "no-extra-boolean-cast": "off",
+    "jsx-a11y/alt-text": "off",
     "jsx-a11y/aria-role": "off",
-    "jsx-a11y/tabindex-no-positive": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/prefer-tag-over-role": "off",
     "jsx-a11y/role-has-required-aria-props": "off",
-    "jsx-a11y/label-has-associated-control": "off",
-    "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/alt-text": "off",
+    "jsx-a11y/tabindex-no-positive": "off",
+    "no-async-promise-executor": "off",
+    "no-autofocus": "off",
+    "no-constant-condition": "off",
+    "no-empty-pattern": "off",
+    "no-extra-boolean-cast": "off",
+    "no-unused-vars": "off",
+    "no-useless-catch": "off",
     "react/jsx-key": "off",
   },
   "overrides": [
