chore: update oxfmt and oxlint configurations, enhance test readability

--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -2,6 +2,7 @@
   "$schema": "./node_modules/oxfmt/configuration_schema.json",
   "singleQuote": true,
   "trailingComma": "all",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "printWidth": 80
 }
 
