updating electron builder to use the liquid glass icon

--- a/packages/desktop-electron/package.json
+++ b/packages/desktop-electron/package.json
@@ -30,7 +30,7 @@
     "beforePack": "./build/desktop-electron/beforePackHook.js",
     "mac": {
       "category": "public.app-category.finance",
-      "icon": "icons/icon.icns",
+      "icon": "icons/icon.icon",
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
       "artifactName": "${productName}-mac-${arch}.${ext}",
@@ -115,7 +115,7 @@
     "copyfiles": "^2.4.1",
     "cross-env": "^10.1.0",
     "electron": "38.3.0",
-    "electron-builder": "26.0.12",
+    "electron-builder": "26.3.4",
     "typescript": "^5.9.3"
   }
 }
