--- a/packages/sync-server/package.json
+++ b/packages/sync-server/package.json
@@ -35,7 +35,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "debug": "^4.4.3",
-    "express": "5.2.0",
+    "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "express-winston": "^4.2.0",
     "ipaddr.js": "^2.2.0",
