Enhance accessibility and linting compliance
- Updated `.oxlintrc.json` to add a warning for `jsx-a11y/no-autofocus` and removed several disabled rules.
- Added `aria-level` attributes to improve semantic structure in `Page.tsx`, `Modal.tsx`, and `ReportCardName.tsx`.
- Replaced `<label>` elements with `<Text>` components in various modals to ensure proper accessibility.
- Added `htmlFor` attributes to labels in `ImportTransactionsModal.tsx` for better form accessibility.
- Disabled specific linting rules inline to address accessibility concerns in `Image.jsx` and `Toggle.tsx`.

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -2,15 +2,12 @@
   "$schema": "./node_modules/oxlint/configuration_schema.json",
   "plugins": ["react", "typescript", "import", "jsx-a11y"],
   "rules": {
+    "jsx-a11y/no-autofocus": ["warn", { "ignoreNonDOM": true }],
+
     // TODO fix all these and re-enable
-    "jsx-a11y/alt-text": "off",
-    "jsx-a11y/aria-role": "off",
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/prefer-tag-over-role": "off",
-    "jsx-a11y/role-has-required-aria-props": "off",
     "jsx-a11y/tabindex-no-positive": "off",
-    "no-autofocus": "off",
   },
   "overrides": [
     {
