--- a/.github/workflows/electron-master.yml
+++ b/.github/workflows/electron-master.yml
@@ -38,7 +38,12 @@ jobs:
           python3 -m venv .venv
           source .venv/bin/activate
           python3 -m pip install setuptools
+      - name: Process release version
+        id: process_version
+        run: |
+          echo "version=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
       - if: ${{ startsWith(matrix.os, 'ubuntu') }}
+        name: Setup Flatpak dependencies
         run: |
           sudo apt-get update
           sudo apt-get install flatpak -y
@@ -47,6 +52,13 @@ jobs:
           sudo flatpak install org.freedesktop.Sdk//24.08 -y
           sudo flatpak install org.freedesktop.Platform//24.08 -y
           sudo flatpak install org.electronjs.Electron2.BaseApp//24.08 -y
+
+          METAINFO_FILE="packages/desktop-electron/extra-resources/linux/com.actualbudget.actual.metainfo.xml"
+          TODAY=$(date +%Y-%m-%d)
+          VERSION=${{ steps.process_version.outputs.version }}
+          sed -i "s/%RELEASE_VERSION%/$VERSION/g; s/%RELEASE_DATE%/$TODAY/g" "$METAINFO_FILE"
+          appstreamcli --version
+          appstreamcli validate "$METAINFO_FILE"
       - name: Set up environment
         uses: ./.github/actions/setup
       - name: Build Electron for Mac
@@ -78,10 +90,6 @@ jobs:
           name: actual-electron-${{ matrix.os }}-appx
           path: |
             packages/desktop-electron/dist/*.appx
-      - name: Process release version
-        id: process_version
-        run: |
-          echo "version=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
       - name: Add to new release
         uses: softprops/action-gh-release@5be0e66d93ac7ed76da52eca8bb058f665c3a5fe # v2.4.2
         with:
