--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cross-env": "^10.1.0",
     "eslint": "^9.39.1",
     "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-oxlint": "^1.30.0",
     "eslint-plugin-typescript-paths": "^0.0.33",
