--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "lint": "oxfmt --check . && oxlint --deny-warnings && eslint . --max-warnings 0",
     "lint:fix": "oxfmt . && oxlint --deny-warnings --fix && eslint . --max-warnings 0 --fix",
     "install:server": "yarn workspaces focus @actual-app/sync-server --production",
-    "typecheck": "yarn tsc --incremental && tsc-strict",
+    "typecheck": "lage typecheck --continue",
+    "typecheck:all": "yarn tsc --incremental && tsc-strict",
     "jq": "./node_modules/node-jq/bin/jq",
     "prepare": "husky"
   },
