--- a/packages/loot-core/package.json
+++ b/packages/loot-core/package.json
@@ -10,6 +10,7 @@
     "build:browser": "cross-env NODE_ENV=production ./bin/build-browser",
     "watch:browser": "cross-env NODE_ENV=development ./bin/build-browser",
     "generate:i18n": "i18next",
+    "typecheck": "tsc --noEmit",
     "test": "npm-run-all -cp 'test:*'",
     "test:node": "ENV=node vitest --run",
     "test:web": "ENV=web vitest --run -c vitest.web.config.ts"
