--- a/packages/plugins-service/package.json
+++ b/packages/plugins-service/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production ./bin/build-service-worker",
     "build-dev": "cross-env NODE_ENV=development ./bin/build-service-worker",
+    "typecheck": "tsc --noEmit",
     "watch": "cross-env NODE_ENV=development ./bin/build-service-worker --watch"
   },
   "author": "",
