--- a/.github/workflows/electron-master.yml
+++ b/.github/workflows/electron-master.yml
@@ -110,6 +110,18 @@ jobs:
             !packages/desktop-electron/dist/Actual-windows.exe
             packages/desktop-electron/dist/*.AppImage
             packages/desktop-electron/dist/*.flatpak
+      - name: Retrieve AppImage SHA256 for Flathub
+        id: appimage_sha256
+        run: |
+          APPIMAGE_X64_SHA256=$(sha256sum packages/desktop-electron/dist/Actual-linux-x86_64.AppImage | awk '{ print $1 }')
+          APPIMAGE_ARM64_SHA256=$(sha256sum packages/desktop-electron/dist/Actual-linux-arm64.AppImage | awk '{ print $1 }')
+          echo "appimage_x64_sha256=$APPIMAGE_X64_SHA256" >> "$GITHUB_OUTPUT"
+          echo "appimage_arm64_sha256=$APPIMAGE_ARM64_SHA256" >> "$GITHUB_OUTPUT"
+
+    outputs:
+      version: ${{ steps.process_version.outputs.version }}
+      appimage_x64_sha256: ${{ steps.appimage_sha256.outputs.appimage_x64_sha256 }}
+      appimage_arm64_sha256: ${{ steps.appimage_sha256.outputs.appimage_arm64_sha256 }}
 
   publish-microsoft-store:
     needs: build
@@ -152,3 +164,36 @@ jobs:
             -NoStatus `
             -AutoCommit `
             -Force
+
+  publish-flathub:
+    needs: build
+    runs-on: ubuntu-22.04
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
+    steps:
+      - name: Checkout Flathub repo
+        uses: actions/checkout@v4
+        with:
+          repository: flathub/com.actualbudget.actual
+          token: ${{ secrets.FLATHUB_GITHUB_TOKEN }}
+
+      - name: Update manifest with new SHA256
+        run: |
+          # Replace x86_64 entry
+          sed -i "/x86_64.AppImage/{n;s|sha256:.*|sha256: ${{ needs.build.outputs.appimage_x64_sha256 }}|}" com.actualbudget.actual.yml
+          sed -i "/x86_64.AppImage/s|url:.*|url: https://github.com/actualbudget/actual/releases/download/v${{ needs.build.outputs.version }}/Actual-linux-x86_64.AppImage|" com.actualbudget.actual.yml
+
+          # Replace arm64 entry
+          sed -i "/arm64.AppImage/{n;s|sha256:.*|sha256: ${{ needs.build.outputs.appimage_arm64_sha256 }}|}" com.actualbudget.actual.yml
+          sed -i "/arm64.AppImage/s|url:.*|url: https://github.com/actualbudget/actual/releases/download/v${{ needs.build.outputs.version }}/Actual-linux-arm64.AppImage|" com.actualbudget.actual.yml
+
+      - name: Create PR in Flathub repo
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.FLATHUB_GITHUB_TOKEN }}
+          commit-message: "Update Actual flatpak to version ${{ needs.build.outputs.version }}"
+          branch: "release/${{ needs.build.outputs.version }}"
+          title: "Update Actual flatpak to version ${{ needs.build.outputs.version }}"
+          body: |
+            This PR updates the Actual desktop flatpak to version ${{ needs.build.outputs.version }}.
+
+            :link: [View release notes](https://actualbudget.org/blog/release-${{ needs.build.outputs.version }})
