Use personal access token securely for VRT update workflow push

--- a/.github/workflows/vrt-update-apply.yml
+++ b/.github/workflows/vrt-update-apply.yml
@@ -121,7 +121,11 @@ jobs:
         env:
           HEAD_REF: ${{ steps.metadata.outputs.head_ref }}
           HEAD_REPO: ${{ steps.metadata.outputs.head_repo }}
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_UPDATE_TOKEN }}
         run: |
+          # Configure git to use the token via credential helper (avoids token in URLs/logs)
+          git config --local credential.helper '!f() { echo "username=x-access-token"; echo "password=${GITHUB_TOKEN}"; }; f'
+          git remote set-url origin "https://github.com/${HEAD_REPO}.git"
           git push origin "HEAD:refs/heads/$HEAD_REF"
           echo "Successfully pushed VRT updates to $HEAD_REPO@$HEAD_REF"
 
