--- a/.github/workflows/electron-pr.yml
+++ b/.github/workflows/electron-pr.yml
@@ -9,6 +9,12 @@ env:
 
 on:
   pull_request:
+    paths:
+      - "packages/**"
+      - "!packages/api/**" # API changes don't affect Electron
+      - "!packages/ci-actions/**" # CI actions changes don't affect Electron
+      - "!packages/docs/**" # Docs changes don't affect Electron
+      - "!packages/eslint-plugin-actual/**" # Eslint plugin changes don't affect Electron
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
