--- a/.github/workflows/size-compare.yml
+++ b/.github/workflows/size-compare.yml
@@ -14,8 +14,12 @@ name: Compare Sizes
 on:
   pull_request_target:
     paths:
-      - 'packages/**'
-      - '!packages/sync-server/**'
+      - "packages/**"
+      - "!packages/sync-server/**" # Sync server changes don't affect the size of the web
+      - "!packages/api/**" # API changes don't affect the size of the web
+      - "!packages/ci-actions/**" # CI actions changes don't affect the size of the web
+      - "!packages/docs/**" # Docs changes don't affect the size of the web
+      - "!packages/eslint-plugin-actual/**" # Eslint plugin changes don't affect the size of the web
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -35,7 +39,7 @@ jobs:
       - name: Set up environment
         uses: ./.github/actions/setup
         with:
-          download-translations: 'false'
+          download-translations: "false"
 
       - name: Wait for ${{github.base_ref}} web build to succeed
         uses: fountainhead/action-wait-for-check@5a908a24814494009c4bb27c242ea38c93c593be # v1.2.0
@@ -79,7 +83,7 @@ jobs:
         with:
           branch: ${{github.base_ref}}
           workflow: build.yml
-          workflow_conclusion: '' # ignore the conclusion of the workflow, since we already checked it
+          workflow_conclusion: "" # ignore the conclusion of the workflow, since we already checked it
           name: build-stats
           path: base
       - name: Download API build artifact from ${{github.base_ref}}
@@ -88,7 +92,7 @@ jobs:
         with:
           branch: ${{github.base_ref}}
           workflow: build.yml
-          workflow_conclusion: '' # ignore the conclusion of the workflow, since we already checked it
+          workflow_conclusion: "" # ignore the conclusion of the workflow, since we already checked it
           name: api-build-stats
           path: base
       - name: Download build stats from PR
@@ -96,7 +100,7 @@ jobs:
         with:
           pr: ${{github.event.pull_request.number}}
           workflow: build.yml
-          workflow_conclusion: '' # ignore the conclusion of the workflow, since we already checked it
+          workflow_conclusion: "" # ignore the conclusion of the workflow, since we already checked it
           name: build-stats
           path: head
           allow_forks: true
@@ -105,7 +109,7 @@ jobs:
         with:
           pr: ${{github.event.pull_request.number}}
           workflow: build.yml
-          workflow_conclusion: '' # ignore the conclusion of the workflow, since we already checked it
+          workflow_conclusion: "" # ignore the conclusion of the workflow, since we already checked it
           name: api-build-stats
           path: head
           allow_forks: true
