--- a/.github/workflows/size-compare.yml
+++ b/.github/workflows/size-compare.yml
@@ -15,6 +15,7 @@ on:
   pull_request_target:
     paths:
       - "packages/**"
+      - ".github/workflows/size-compare.yml"
       - "!packages/sync-server/**" # Sync server changes don't affect the size of the web
       - "!packages/api/**" # API changes don't affect the size of the web
       - "!packages/ci-actions/**" # CI actions changes don't affect the size of the web
