--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - "packages/**"
+      - "package.json"
       - "yarn.lock"
       - ".github/workflows/e2e-test.yml"
       - "!packages/sync-server/**" # Sync server changes don't affect E2E tests
