--- a/.github/workflows/electron-pr.yml
+++ b/.github/workflows/electron-pr.yml
@@ -11,6 +11,7 @@ on:
   pull_request:
     paths:
       - "packages/**"
+      - "package.json"
       - "yarn.lock"
       - ".github/workflows/electron-pr.yml"
       - "!packages/api/**" # API changes don't affect Electron
