--- a/.github/workflows/vrt-update-generate.yml
+++ b/.github/workflows/vrt-update-generate.yml
@@ -6,6 +6,7 @@ on:
     types: [opened, synchronize, reopened]
     paths:
       - "packages/**"
+      - "package.json"
       - "yarn.lock"
       - ".github/workflows/vrt-update-generate.yml"
       - "!packages/sync-server/**" # Sync server changes don't affect the VRT
