:robot: Adding path filters so workflows only run when required (#6364)
* adding path filters to workflows so they only run when required

* trigger them also when the workflow changes

* adding yarn lock in case packages affect e2e

* release notes

* add the package.json in case we modify the scripts

* Remove API changes from size comparison workflow

* Clarify size impact of package changes in workflow

Updated comments to clarify that certain package changes don't affect the size of the web/api.

* Fix comments for VRT update exclusions

* Update VRT screenshots

Auto-generated by VRT workflow

PR: #6364

* Update VRT screenshots

Auto-generated by VRT workflow

PR: #6364

* Fix comment formatting in VRT update workflow

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/electron-pr.yml
+++ b/.github/workflows/electron-pr.yml
@@ -9,6 +9,15 @@ env:
 
 on:
   pull_request:
+    paths:
+      - "packages/**"
+      - "package.json"
+      - "yarn.lock"
+      - ".github/workflows/electron-pr.yml"
+      - "!packages/api/**" # API changes don't affect Electron
+      - "!packages/ci-actions/**" # CI actions changes don't affect Electron
+      - "!packages/docs/**" # Docs changes don't affect Electron
+      - "!packages/eslint-plugin-actual/**" # Eslint plugin changes don't affect Electron
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
