--- a/.github/workflows/vrt-update-generate.yml
+++ b/.github/workflows/vrt-update-generate.yml
@@ -5,8 +5,15 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
-      - 'packages/**'
-      - '.github/workflows/vrt-update-generate.yml'
+      - "packages/**"
+      - "package.json"
+      - "yarn.lock"
+      - ".github/workflows/vrt-update-generate.yml"
+      - "!packages/sync-server/**" # Sync server changes don't affect the VRT
+      - "!packages/api/**" # API changes don't affect the VRT
+      - "!packages/ci-actions/**" # CI actions changes don't affect the VRT
+      - "!packages/docs/**" # Docs changes don't affect the VRT
+      - "!packages/eslint-plugin-actual/**" # Eslint plugin changes don't affect the VRT
 
 permissions:
   contents: read
