fix: update VRT trigger condition to use startsWith for command detection
- Modify the condition in vrt-update-generate.yml to use startsWith instead of contains for the /update-vrt command in PR comments, ensuring more accurate command detection.

--- a/.github/workflows/vrt-update-generate.yml
+++ b/.github/workflows/vrt-update-generate.yml
@@ -21,7 +21,7 @@ jobs:
     # Only run on PR comments containing /update-vrt
     if: >
       github.event.issue.pull_request &&
-      contains(github.event.comment.body, '/update-vrt')
+      startsWith(github.event.comment.body, '/update-vrt')
     container:
       image: mcr.microsoft.com/playwright:v1.56.0-jammy
     steps:
