feat(e2e): add static asset caching for CI test runs
Integrate playwright-network-cache to cache static assets (.js, .css, .png, etc.)
during E2E tests in CI environments, reducing network requests and improving
test execution speed.

- Add playwright-network-cache dependency
- Create cacheRoute fixture for static asset caching
- Only enable caching when process.env.CI is set
- Add .network-cache to .gitignore

--- a/packages/desktop-client/package.json
+++ b/packages/desktop-client/package.json
@@ -51,6 +51,7 @@
     "mdast-util-newline-to-break": "^2.0.0",
     "memoize-one": "^6.0.0",
     "pikaday": "1.8.2",
+    "playwright-network-cache": "^1.5.0",
     "promise-retry": "^2.0.1",
     "prop-types": "^15.8.1",
     "re-resizable": "^6.11.2",
