--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -16,4 +16,9 @@ jobs:
     name: Deploy Docs
     steps:
       - name: Docusaurus Deploy
-        run: yarn deploy:docs
+        run: |
+          GIT_USER=MikesGlitch \
+          GIT_PASS=${{ secrets.DOCS_GITHUB_PAGES_DEPLOY }} \
+          GIT_USER_NAME=github-actions[bot] \
+          GIT_USER_EMAIL=github-actions[bot]@users.noreply.github.com \
+          yarn deploy:docs
