--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -13,8 +13,14 @@ on:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
     name: Deploy Docs
     steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
+      - name: Set up environment
+        uses: ./.github/actions/setup
+
       - name: Docusaurus Deploy
         run: |
           GIT_USER=MikesGlitch \
