--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - master
+    pull_request:
     paths:
       - "packages/docs/**"
       - ".github/workflows/docs-spelling.yml"
